changelog

v1.0	initial

v1.1	- NEW usb flash drive read/write
		- NEW SCRIPT OP for scripted execution of other scripts!
		- NEW MUTE and UNMUTE OPS for disabling trigger input
		- NEW hotkeys for MUTE toggle per input (meta-shift-number)
		- NEW screen indication in live mode for MUTE status
		- NEW SCALE OP for scaling number from one range to another
		- NEW JI OP just intonation helper
		- NEW STATE OP to read current state of input triggers 1-8 (low/high = 0/1)
		- NEW keypad executes scripts (works for standalone usb keypads and full-sized keyboards)
		- NEW KILL OP clears delays, stack, cv slews, pulses
		- NEW hotkey meta+ESC executes KILL
		- NEW ABS OP absolute value, single argument
		- NEW FLIP OP variable which changes state (0/1) on each read
		- NEW LOGIC OPS: AND, OR, XOR
		- NEW O OPS: O.MIN, O.MAX, O.WRAP, O.DIR for counter range control
		- NEW DRUNK OPS: DRUNK.MIN, DRUNK.MAX, DRUNK.WRAP for range control
		- NEW TR.POL specifies the polarity of TR.PULSE
		- NEW if powered down in tracker mode, will power up in tracker mode
		- IMP TR.PULSE retrigger behavior now predictable
		- IMP mode switch keys more consistent (not contanstly resetting to live mode)
		- FIX bug in command history in live mode
		- FIX EXP OP now exists
		- FIX P and PN parse error
		- FIX possible crash on excess length line entry
		- FIX CV wrapping with negative CV.OFF values
		- FIX INIT script executed now on keyboardless scene recall
		- FIX Q.AVG overflow no more
		- FIX P.PUSH will fully fill a pattern
		- FIX CV.SET followed by slewed CV in one command works
		- FIX DEL 0 no longer voids command

vNext
		- NEW P.RM will also return the value removed